--- a/results.html
+++ b/results.html
@@ -181,7 +181,7 @@
                 <span>Change Axis</span>
             </div>
         </div>
-        
+
         <div class="card__1 card" id="overview_secondary">
             <div class="header">
                 <p>Result</p>
@@ -217,7 +217,7 @@
                 <label for="std_roll">Roll</label>
             </div>
             <div style="text-align: center;">
-                <button class="hover-expand ">Submit</button>
+                <button id="search_result" class="hover-expand ">Submit</button>
             </div>
             <div class="colg_name">RAJSHAHI COLLEGE</div>
             <div class="img"><svg id="b21613c9-2bf0-4d37-bef0-3b193d34fc5d" data-name="Layer 1"
@@ -246,7 +246,7 @@
                     <circle cx="433.63626" cy="105.17383" r="20" fill="#f9a826" />
                     <circle cx="433.63626" cy="105.17383" r="12.18187" fill="#fff" /></svg></div>
             <div>
-                <input class="gate" id="std_name" type="text" placeholder="Don't remember Roll number?" />
+                <input class="gate" id="std_name" type="text" placeholder="Seach by name is currently off" />
                 <label for="std_name">Name</label>
             </div>
         </div>
