--- a/results.html
+++ b/results.html
@@ -26,6 +26,10 @@
 <body>
     <header>
         <div class="header-logo">Show<span>Result</span></div>
+        <div class="search-container">
+            <input type="text" placeholder="Search...">
+            <div class="search"></div>
+        </div>
         <nav>
             <a href="#colleges">Colleges</a>
         </nav>
@@ -67,7 +71,8 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2&s=1&mr=3" class="collapse__sublink">Final HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2&s=1&mr=3"
+                                class="collapse__sublink">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
