--- a/results.html
+++ b/results.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta developer='smmus'>
 
+    <!-- custom meta tags thsat provide info wile loading specific dbs -->
+    <meta db=rc data-in="Rajshahi Collage" data-main_roll_digits="3" data-is_rank_given="1">
+    <meta db=dc data-in="Dhaka Collage" data-main_roll_digits="3" data-is_rank_given="1">
+    
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
     <!-- chartjs css -->
@@ -69,8 +74,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2&s=1&mr=3"
-                                class="collapse__sublink">Final HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-xm_name='final'>Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -89,8 +93,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final&s=1&mr=3"
-                                class="collapse__sublink">Final HSC-2021</a>
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -209,7 +212,7 @@
             </div>
         </div>
         <div id="search" class="card card__1">
-            <div class="colg_name">RAJSHAHI COLLEGE</div>
+            <div class="colg_name"></div>
             <div>
                 <input class="gate" id="std_roll" type="text" placeholder="3 digit ROLL number" />
                 <label for="std_roll">Roll</label>
