--- a/results.html
+++ b/results.html
@@ -74,7 +74,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-xm_name='final'>Final HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
