--- a/results.html
+++ b/results.html
@@ -74,8 +74,8 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
+                            <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_final_2" data-is_rank_given="1" data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -93,8 +93,8 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
+                            <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given="1"  data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -110,10 +110,10 @@
                                 fill="white" width="18px" height="18px">
                                 <path d="M0 0h24v24H0z" fill="none" />
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
-                                
+
                         <ul class="collapse__menu">
-                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-xm_name="11-Nov-2019 To 27-Nov-2019 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-xm_name="20-Sep-2020 To 30-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
+                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-db='cc' data-xm="hsc_2021_1st_year_science_midterm" data-is_rank_given="0"  data-xm_name="11-Nov-2019 To 27-Nov-2019 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half Yearly HSC-2021</a>
+                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='cc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given="0" data-xm_name="20-Sep-2020 To 30-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -131,8 +131,8 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="#" class="collapse__sublink">Final HSC-2021</a>
+                            <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
+                            <!-- <a href="#" class="collapse__sublink">Final HSC-2021</a> -->
                         </ul>
                     </div>
                     <a href="#" class="nav__link">
