--- a/results.html
+++ b/results.html
@@ -75,7 +75,7 @@
 
                         <ul class="collapse__menu">
                             <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_final_2" data-is_rank_given=1 data-is_grade_given=1 data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_final_2" data-is_rank_given=1  data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -94,7 +94,7 @@
 
                         <ul class="collapse__menu">
                             <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given=1 data-is_grade_given=1 data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given=1  data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
