--- a/results.html
+++ b/results.html
@@ -7,10 +7,10 @@
     <meta developer='smmus'>
 
     <!-- custom meta tags thsat provide info wile loading specific dbs -->
-    <meta db=rc data-in="Rajshahi College" data-main_roll_digits="3" data-is_rank_given="1">
-    <meta db=dc data-in="Dhaka College" data-main_roll_digits="3" data-is_rank_given="1">
-    <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3" data-is_rank_given="0">
-    <meta db=gccc data-in="Chittagonj City College" data-main_roll_digits="3" data-is_rank_given="1">
+    <meta db=rc data-in="Rajshahi College" data-main_roll_digits="3">
+    <meta db=dc data-in="Dhaka College" data-main_roll_digits="3">
+    <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3">
+    <meta db=gccc data-in="Chittagonj City College" data-main_roll_digits="3">
     
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
@@ -94,7 +94,7 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_midterm" data-xm_name="14-Jan-2020 To 12-Feb-2020 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half Yearly HSC-2021</a>
                             <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given=1  data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
                         </ul>
                     </div>
